test/valid/IntegerToString/IntegerToString.plume
/**
 * A class to test the toString method of an integer value
 *
 * @author Vasco T. Vasconcelos
 * @version $Id: IntegerToString.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class IntegerToString extends Object is

  method main : () -> String is
    5.toString()