test/invalid/ComentariosBlocoNaoAbre/ComentariosBlocoNaoAbre.plume

 * Falta a abretura deste bloco de comentario
 *
 * @author 37059, Rita Henriques
 * @version $Id: ComentariosBlocoNaoAbre.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class ComentariosBlocoNaoAbre extends Object is

  method main : () -> String is
		"Hello".toString()